7/23/14 #85 instantiate bar charts and balances scales on demand, ensure that their bounds are never empty to prevent 'Martix was suspicious' assertion failure
7/23/14 #84 use different shades of 'black' to differentiate between 'over' and 'activated' for pickers
# 1.0.0-dev.12 7/22/14
7/22/14 Intro: right-align Tools combo box with products box
7/22/14 #83 fix IntroductionModel.reset
7/21/14 fix level-completed dialog so that it shows time when timer is enabled
# 1.0.0-dev.11 7/21/14
7/21/14 #82 bug fixes to GamePlayNode
7/21/14 #81 BoxNode: add molecules on demand, use visibility to display the correct number of molecules
7/21/14 #82 clean up of GamePlayNode and GameView
7/21/14 #82 factor out GamePlayNode, create it on demand (when first level-selection is made)
7/21/14 #82 optimize start up: initialize 'bar charts' and 'balance scales' representations on demand
# 1.0.0-dev.10 7/21/14
7/21/14 #69 BalanceScaleNode: optimization fixes, refactoring and cleanup
7/21/14 #69 BalanceScaleNode: create atoms on demand, use visibility to display the correct number of atoms
7/21/14 #69 rebuild scales only when equation changes, otherwise update counts for each scale
7/21/14 #69 reuse everything except atoms in BalanceScaleNode
7/21/14 #69 handle highlighting correctly in BalanceScaleNode
7/20/14 #70 add AACT to credits
7/18/14 #80 expand touchArea for radio buttons in Introduction screen
7/18/14 #69 clean up BalanceScaleNode constructor
7/18/14 #69 pass properties to BalanceScaleNode for number of atoms on each side of the scale (properties not observed yet)
7/18/14 #69 defer creation of 'Show Why' content until the button is pressed
7/18/14 #79 fix horizontal layout of bars that have arrows at top
7/18/14 #69 update numberOfAtomProperty instead of rebuilding bars when equation coefficients change
7/18/14 add Equation.toString to make inspection easier in debugger